FitLifeProLatest/force-app/main/default/objects/Opportunity/fields/Available_Slot__c.field-meta.xml
<CustomField>
    <fullName>Available_Slot__c</fullName>
    <label>Available Slot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>