FitLifeProLatest/force-app/main/default/objects/Opportunity/fields/Available_Timings__c.field-meta.xml
<CustomField>
    <fullName>Available_Timings__c</fullName>
    <label>Available Timings</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Available_Slot__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5:00 AM-6:00 AM</fullName>
            </value>
            <value>
                <fullName>6:00 AM-7:00 AM</fullName>
            </value>
            <value>
                <fullName>7:00 AM-8:00 AM</fullName>
            </value>
            <value>
                <fullName>5:00 PM-6:00 PM</fullName>
            </value>
            <value>
                <fullName>6:00 PM-7:00 PM</fullName>
            </value>
            <value>
                <fullName>7:00 PM-8:00 PM</fullName>
            </value>
            <value>
                <fullName>8:00 PM-9:00 PM</fullName>
            </value>
            <value>
                <fullName>9:00 PM-10:00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>