FitLifeProLatest/force-app/main/default/objects/Opportunity/fields/Membership_Plan__c.field-meta.xml
<CustomField>
    <fullName>Membership_Plan__c</fullName>
    <label>Membership Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>