FitLifeProLatest/force-app/main/default/objects/Opportunity/fields/Notify_To_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Notify_To_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify To Renewal</label>
    <type>Checkbox</type>
</CustomField>