FitLifeProLatest/force-app/main/default/objects/Opportunity/fields/Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_End_Date__c</fullName>
    <formula>IF(
ISPICKVAL( Subscription__c , &#39;Monthly&#39;), 
 Subscription_Start_Date__c +30, 
IF(
ISPICKVAL( Subscription__c , &#39;Quarterly&#39;), 
Subscription_Start_Date__c +120,
Subscription_Start_Date__c +365)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated based on Subscription Start Date</inlineHelpText>
    <label>Subscription End Date</label>
    <type>Date</type>
</CustomField>