FitLifeProLatest/force-app/main/default/objects/Opportunity/fields/Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Date__c</fullName>
    <label>Subscription Start Date</label>
    <type>Date</type>
</CustomField>