FitLifeProLatest/force-app/main/default/objects/Opportunity/validationRules/Subscription_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Subscription_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Subscription_Start_Date__c &lt;= TODAY()</errorConditionFormula>
    <errorDisplayField>Subscription_Start_Date__c</errorDisplayField>
    <errorMessage>Enter future date</errorMessage>
</ValidationRule>